[project]
name = "tap"
authors = [
    { name = "Samarth Upare", email = "samarth.upare@redtra.com"}
]
description = "a payment gateway integration code by redtra technologies"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
requests = ">=2.20"
pytest = ">=3.4"
pytest-mock = ">=1.7"
pytest-xdist = ">=1.22"
pytest-cov = ">=2.5"
vcrpy = ">=1.10.0"
Faker = ">=0.7.3"
future = ">=0.17.1"